# naturo

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  NEEDS-ACE.md  README.md  SECURITY.md  TEST_PLAN.md  naturo-progress.md  pyproject.toml  test_readme_platforms.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.md
.github/workflows/: build.yml  codeql.yml  desktop-tests.yml  publish.yml  qa-agent.yml
.work/: bugs.md  phase3-spec.md  qa-full-coverage-plan.md  qa-full-coverage-report.md  qa-round1-report.md  qa-round10-report.md  qa-round11-report.md  qa-round12-report.md  qa-round14-report.md  qa-round15-report.md  qa-round16-report.md  qa-round17-report.md  qa-round18-report.md  v0.3.0-release-guide.md
.work/orphaned-wip/: 1291-input-focus-fix.patch
.work/proposed-workflows/: dependabot-automerge.yml
.work/reviews/: 2026-03-27-weekly-review.md  2026-04-02-1500-daily-review.md  2026-04-04-0545-daily-review.md  2026-04-04-0930-daily-review.md  2026-04-06-1200-daily-review.md  2026-04-08-1600-daily-review.md  2026-04-09-1200-daily-review.md  2026-04-09-1600-daily-review.md  2026-04-12-1600-daily-review.md  2026-04-13-1200-daily-review.md  2026-04-14-1200-daily-review.md  2026-04-15-1800-daily-review.md  2026-04-16-1200-daily-review.md  2026-04-17-1200-daily-review.md  2026-05-07-1200-daily-review.md  2026-05-08-1200-daily-review.md  2026-05-09-0003-daily-review.md  2026-05-09-1501-daily-review.md  2026-05-10-1501-daily-review.md  2026-05-11-1201-daily-review.md  2026-05-12-0003-daily-review.md  2026-05-12-1501-daily-review.md  2026-05-13-0001-daily-review.md  2026-05-26-0003-daily-review.md  2026-05-27-1201-daily-review.md  2026-05-27-1501-daily-review.md  (+224 more)
agents/: EVOLUTION.md  GOAL.md  GOAL_UITREE_CONSISTENCY.md  RULES.md  STATE.md  VISION.md  run.sh
core/: CMakeLists.txt
docs/: AGENT_INTEGRATION.md  ARCHITECTURE.md  CLI_REFERENCE.md  COMPETITIVE.md  DESIGN-PRINCIPLES.md  ERROR_CODES.md  MCP_SERVER.md  MIGRATION_FROM_RPA_SCRIPTS.md  QUICKSTART.md  RECOGNITION.md  RECOGNITION_TREE.md  ROADMAP.md  SOFTWARE_ADAPTATION.md  SUPPORTED_APPS.md  TEST_PLAN.md
examples/: README.md  agent_demo.py  agent_frameworks.py  form_filler.py  notepad_hello.py  ui_inspector.py  window_capture.py
naturo/: __init__.py  __main__.py  agent.py  agent_tools.py  ai_find.py  annotate.py  app_ids.py  bridge.py  cache.py  cascade.py  cdp.py  config.py  deps.py  dialog.py  diff.py  electron.py  errors.py  excel.py  image_match.py  mcp_server.py  ocr_match.py  process.py  recording.py  retry.py  routing.py  search.py  selector.py  service.py  snapshot.py  value_preview.py  verify.py  vision.py  visual.py  wait.py  word.py
npm/: README.md  package.json
scripts/: generate_cli_reference.py  run-qa.bat  sync_dll.py
tests/: QA_AGENT.md  QA_CONTEXT.md  _launch.py  _process_snapshot.py  _soak.py  conftest.py  test_adaptation_degree.py  test_agent.py  test_agent_base.py  test_agent_tools.py  test_ai_find.py  test_annotate.py  test_anthropic_agent.py  test_anthropic_oauth.py  test_anthropic_provider.py  test_app_alias_localized.py  test_app_cmd.py  test_app_control.py  test_app_filter_basename_789.py  test_app_filter_process_priority.py  test_app_ids.py  test_app_not_found_error.py  test_app_path_roundtrip_1084.py  test_app_targeting_parity_1065.py  test_app_window_targeting_871.py  test_auto_route_integration.py  test_backends.py  test_bridge_errors.py  test_bridge_models.py  test_bridge_tree.py  test_browser.py  test_browser_cmd.py  test_browser_download.py  test_browser_element.py  test_browser_frame.py  test_browser_launcher.py  test_browser_page.py  test_browser_screenshot_error_codes_1135.py  test_browser_screenshot_selector_1123.py  test_browser_selectors.py  (+240 more)
(+395 files in other folders)
