[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "naturo"
version = "0.2.0"
description = "Windows desktop automation engine — see, click, type, automate."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Ace Li", email = "ace@scoutli.ai"},
]
keywords = ["automation", "windows", "desktop", "ui", "rpa", "accessibility", "uia", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Desktop Environment",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.0",
]

[project.urls]
Homepage = "https://github.com/AcePeak/naturo"
Documentation = "https://github.com/AcePeak/naturo#readme"
Repository = "https://github.com/AcePeak/naturo"
Issues = "https://github.com/AcePeak/naturo/issues"
Changelog = "https://github.com/AcePeak/naturo/releases"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]
ai = [
    "anthropic>=0.20",
    "openai>=1.0",
]
mcp = [
    "mcp>=1.0",
]
cdp = [
    "websocket-client>=1.0",
]
annotate = [
    "Pillow>=9.0",
]
desktop = [
    "pyvda>=0.4.0; sys_platform == 'win32'",
]

[project.scripts]
naturo = "naturo.cli:main"

[tool.setuptools.packages.find]
include = ["naturo*"]

[tool.setuptools.package-data]
naturo = ["bin/*.dll", "bin/*.so", "bin/*.dylib"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "ui: marks tests that need a desktop session (deselect with '-m \"not ui\"')",
    "windows: Windows-only test",
    "macos: macOS-only test",
    "linux: Linux-only test",
    "slow: takes >5s to run",
    "stress: stress/stability test (>30s)",
    "e2e: end-to-end workflow test",
    "acceptance: role-based acceptance test",
    "performance: performance benchmark",
    "integration: real-app integration tests (require Windows desktop + apps)",
]
